crates/compiler/tests/parse_errors/record_pattern_end.elm
module Main exposing (..)

x = case 1 of
  { a b } -> 1
